@@ -8,7 +8,10 @@ import io.swagger.v3.oas.annotations.media.*;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import lombok.RequiredArgsConstructor;
+import org.apache.tomcat.util.http.fileupload.IOUtils;
 import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -16,6 +19,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -26,6 +30,8 @@ import java.nio.file.Paths;
 public class FileController {
 
     private final IFileService service;
+
+    private final ResourceLoader resourceLoader;
 
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "When read successful and return object",
@@ -48,8 +54,13 @@ public class FileController {
     @Operation(summary = "A API like a link when access will download Create class Format File")
     @GetMapping("/download/class-format")
     public ResponseEntity<?> downClassFormatFile() throws IOException {
-        Path path = Paths.get("file-format", "create-class-format.csv");
-        byte[] buffer = Files.readAllBytes(path);
+//        Path path = Paths.get("file-format", "create-class-format.csv");
+//        byte[] buffer = Files.readAllBytes(path);
+
+        Resource fileResource = resourceLoader.getResource("classpath:" + "file-format/create-class-format.csv");
+        InputStream inputStream = fileResource.getInputStream();
+        byte[] buffer = inputStream.readAllBytes();
+
         ByteArrayResource resource = new ByteArrayResource(buffer);
         HttpHeaders headers = new HttpHeaders();
         headers.add(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=create-class-format.csv");
